changed modules names to module from week

--- a/_data/course.yml
+++ b/_data/course.yml
@@ -1,2 +1,2 @@
 title: Writing for change
-modules: [week1, week2, week3, week4, week5, week6, week7, week8]
+modules: [Module 1, Module 2, Module 3, Module 4, Module 5, Module 6, Module 7, Module 8]
