changing landing for better conversion

--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,7 @@ markdown: redcarpet
 permalink: /:categories/:title/
 url: writing4change.p2pu.org
 ga_tracking_code: UA-5757664-22
+
+sass:
+    sass_dir: _sass
+    style: :compressed
