--- a/_data/course.yml
+++ b/_data/course.yml
@@ -1,3 +1,2 @@
 title: Writing for change
-modules: ['Module 1', 'Module 2', 'Module 3', 'Module 4', 'Module 5', 'Module 6', 'Module 7',
-'Module 8']
+modules: ['Module 1', 'Module 2', 'Module 3', 'Module 4']
